--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,6 +1,7 @@
 # Don't print a new line at the start of the prompt
 add_newline = false
 clear_before_printing = true
+
 format = """\
   $username\
   $directory\
@@ -27,8 +28,8 @@ format = """\
   """
 
 # Replace the "❯" symbol in the prompt with "➜"
-[character]      # The name of the module we are confguring is "character"
-#symbol = "➜"     # The "symbol" segment is being set to "➜"
+[character]                            # The name of the module we are configuring is "character"
+success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "✗" # The symbol used before text input if the previous command failed
 use_symbol_for_status = true # Indicate error status by changing the symbol
 
