--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,6 +1,5 @@
 # Don't print a new line at the start of the prompt
 add_newline = false
-clear_before_printing = true
 
 format = """\
   $username\
@@ -15,7 +14,6 @@ format = """\
   $ruby\
   $rust\
   $python\
-  $haskell\
   $elm
   $golang\
   $cmd_duration\
@@ -31,7 +29,6 @@ format = """\
 [character]                            # The name of the module we are configuring is "character"
 success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "✗" # The symbol used before text input if the previous command failed
-use_symbol_for_status = true # Indicate error status by changing the symbol
 
 # Disables the line_break module, making the prompt a single line
 [line_break]
@@ -48,7 +45,7 @@ discharging_symbol = ""
 [conda]
 symbol = " "
 
-[docker]
+[docker_context]
 symbol = " "
 
 [elixir]
@@ -62,9 +59,6 @@ symbol = " "
 
 [golang]
 symbol = " "
-
-[haskell]
-symbol = " "
 
 [hg_branch]
 symbol = " "
