chore: update versions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set -g history-limit 5000
 # use vim key bindings
 setw -g mode-keys vi
 
-# disable mouse
+# enable mouse
 set -g mouse off
 
 # decrease command delay (increases vim responsiveness)
@@ -55,7 +55,7 @@ bind C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config!"
 
-# panes: window splitting 
+# panes: window splitting
 unbind %
 bind | split-window -h
 unbind '"'
@@ -157,12 +157,11 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
   # Automatic restore
   set -g @continuum-restore 'on'
 
-# Make navigation between tmux and vim panes seamlessly 
+# Make navigation between tmux and vim panes seamlessly
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Other plugins
 set -g @tpm_plugins '                     \
-    tmux-plugins/tmux-continuum           \
     tmux-plugins/tmux-yank                \
     tmux-plugins/tmux-pain-control        \
     tmux-plugins/tmux-copycat             \
