--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,41 +1,18 @@
 # Don't print a new line at the start of the prompt
 add_newline = false
 
-format = """\
-  $username\
-  $directory\
-  $git_branch\
-  $git_commit\
-  $git_state\
-  $git_status\
-  $cmd_duration\
-  $package\
-  $nodejs\
-  $ruby\
-  $rust\
-  $python\
-  $elm
-  $golang\
-  $cmd_duration\
-  $custom\
-  $line_break\
-  $jobs\
-  $battery\
-  $time\
-  $character\
-  """
+format = "$all"
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                            # The name of the module we are configuring is "character"
 success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "✗" # The symbol used before text input if the previous command failed
 
-# Disables the line_break module, making the prompt a single line
-[line_break]
-disabled = true
-
 [aws]
-symbol = " "
+format = 'on [$symbol($profile )(\($region\) )]($style)'
+style = "bold blue"
+symbol = "🅰 "
+disabled = true
 
 [battery]
 full_symbol = ""
@@ -96,3 +73,12 @@ symbol = " "
 [rust]
 symbol = " "
 
+[kubernetes]
+format = 'on [⛵ ($user on )($cluster in )$context \($namespace\)](dimmed green) '
+disabled = false
+
+[kubernetes.context_aliases]
+'arn:aws:eks:eu-central-1:547858447164:cluster/tme-cid-eks-d3qwxVWA' = 'CI/CD'
+
+[kubernetes.user_aliases]
+'arn:aws:eks:eu-central-1:547858447164:cluster/tme-cid-eks-d3qwxVWA' = 'eks-admin'
